cluster/grafana/deployment-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana-postgresql-deployment
  namespace: grafana
spec:
  replicas: 1
  serviceName: grafana-postgresql
  selector:
    matchLabels:
      app: grafana-postgresql
  template:
    metadata:
      labels:
        app: grafana-postgresql
    spec:
      nodeSelector:
        role: apps
      containers:
        - envFrom:
            - secretRef:
                name: grafana-secrets
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/library/postgres:18.6
          name: postgresql
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/
              name: postgresql-vol
      volumes:
        - name: postgresql-vol
          persistentVolumeClaim:
            claimName: grafana-pvc-postgresql
